# research

./: .gitignore  README.md
agent-login/: README.md  _summary.md  claude-plan.md  notes.md  research-report.md  validity-and-usefulness.md
browser-agent-in-browser-sandbox/: README.md  _summary.md  notes.md
browser-local-compute-runtime-poc/: .gitignore  README.md  _summary.md  index.html  notes.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
browser-local-compute-runtime-poc/browser-tls-rustls/: Cargo.toml
browser-local-compute-runtime-poc/browser-tls-rustls/pkg/: browser_tls_rustls.js  browser_tls_rustls_bg.wasm.d.ts  package.json
browser-local-compute-runtime-poc/browser-tls-rustls/src/: lib.rs
browser-local-rag-trials-postmortem/: README.md  _summary.md  notes.md
captcha-automation-research/: 2captcha-integration.ts  README.md  capsolver-integration.ts  notes.md  service-comparison.md
e2e-file-sharing-survey/: notes.md
opensigner-google-custodial-wallet-poc/: README.md  _summary.md  docker-compose.local.yml  notes.md
private-file-sharing-survey/: README.md  notes.md
random-scheduling-service/: README.md  _summary.md  notes.md
short-domain-names/: COMPREHENSIVE_TLD_REPORT.md  README.md  all_domains.txt  comprehensive_all_tlds.sh  comprehensive_tld_search.py  domain_scraper.py  domains_found.csv  domains_interesting.json  fetch_domains.sh  fetch_domains_v2.py  final_tld_comparison.sh  get_sample.sh  mass_scrape.sh  multi_tld_search.sh  notes.md  process_domains.py  process_domains_v2.py  sample.json  scraper.py  scraper_final.py  (+11 more)
(+110 files in other folders)
